[project]
name = "hvt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nltk>=3.9.4",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "wandb>=0.27.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
